--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,48 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial;
+}
+
+body{
+    background-color: lightgray;
+}
+
+#outer{
+    position: absolute;
+    padding-top: 2vh;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    left: 12.5vw;
+    top: 5vh;
+    width: 75vw;
+    height: 90vh;
+    background-color: white;
+}
+
+#left{
+    position: absolute;
+    width: 34.5vw;
+    left: 3vw;
+}
+
+#right{
+    position: absolute;
+    width: 34.5vw;
+    right: 3vw;
+}
+
 h1{
-  color: red;
+    width: 100%;
+    text-align: center;
+    color: lightblue;
+}
+
+img{
+    height: 30vh;
+}
+
+p{
+    margin: 10px;
+    font-size: 20px
 }
